--- a/Capstone_Parkinsons/YouTubeDataGathering.ipynb
+++ b/Capstone_Parkinsons/YouTubeDataGathering.ipynb
@@ -1220,7 +1220,7 @@
     "from apiclient.errors import HttpError\n",
     "from oauth2client.tools import argparser\n",
     "\n",
-    "DEVELOPER_KEY = \"AIzaSyDJbRhEMlkxNd7sZRjfB9X3fKR7vmZlT_E\"\n",
+    "DEVELOPER_KEY = \"BLANK\"\n",
     "YOUTUBE_API_SERVICE_NAME = \"youtube\"\n",
     "YOUTUBE_API_VERSION = \"v3\"\n",
     "\n",
